infra/old/k8s-beta/cubemap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cubemap
  namespace: beta
spec:
  selector:
    matchLabels:
      app: cubemap
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: cubemap
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: cubemap
      containers:
      - name: cubemap
        image: frikanalen/cubemap
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /etc/cubemap
        ports:
          - name: program
            containerPort: 5500
            protocol: UDP
          - name: web
            containerPort: 9094
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9094
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: cubemap
  namespace: beta
spec:
  clusterIP: None
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  ports:
  - name: web
    port: 9094
  - name: program
    port: 5500
    protocol: UDP
  selector:
    app: cubemap
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-cubemap-prefix
  namespace: beta
spec:
  stripPrefix:
    prefixes:
      - /cubemap
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: cubemap
  namespace: beta
spec:
  tls:
    certResolver: default
  entryPoints: 
    - web
    - websecure
  routes:
  - match: Host(`beta.frikanalen.no`) && PathPrefix(`/cubemap`)
    kind: Rule
    middlewares:
      - name: strip-cubemap-prefix
        namespace: beta
    services:
    - kind: Service
      name: cubemap
      scheme: http
      port: 9094
